[package]
name = "remmy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dirs = "5.0.1"
lemmy-client = { version = "1.0.2", features = ["rustls-tls"] }
reqwest = { version = "0.12.5", features = ["rustls-tls"] }
roux = { version = "2.2.12", features = ["rustls"] }
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
