[package]
name = "remmy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive", "wrap_help"] }
dirs = "5"
lemmy-client = { version = "1", features = ["rustls-tls"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
roux = { version = "2", features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
